syntax = "proto3";

option go_package = ".;proto";

service RedisOperation {
    rpc SetString(Request) returns (StringResponse) {}
	rpc GetString(Request) returns (StringResponse) {}
	rpc AddElementToSet(Request) returns (IntResponse) {}
	rpc ElementIsInSet(Request) returns (BoolResponse) {}
    rpc GetAllElementFromSet(Request) returns (StringsResponse){}
}

message Request {
	string key = 1;
	string value = 2;
}

message StringResponse{
   string result = 1;
}

message IntResponse{
   int32 result = 1;
}

message BoolResponse{
   bool result = 1;
}

message StringsResponse{
   repeated string result = 1;
}